# automapper.py

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: lint-and-test.yml  python-app.yml
automapper/: mapper.py
tests/: conftest.py  test_dataclass_to_dataclass.py  test_dataclass_to_object.py  test_mapper.py  test_object_to_dataclass.py  test_object_to_object.py
tests/dataclass/: test_dict_to_dataclass.py  test_pydantic_to_dataclass.py
tests/object/: test_dataclass_to_object.py  test_dict_to_object.py  test_object_to_object.py  test_pydantic_to_object.py
tests/pydantic/: test_dataclass_to_pydantic.py  test_dict_to_pydantic.py  test_object_to_pydantic.py  test_pydantic_to_pydantic.py
